--- a/pub/skin/adminhtml/default/openmage/login.css
+++ b/pub/skin/adminhtml/default/openmage/login.css
@@ -75,23 +75,7 @@ body {
   overflow-x: hidden;
 }
 body#page-login {
-  background-color: #3d4f5c;
-  background-image: url(images/login_background.jpg);
-  background-repeat: no-repeat;
-  background-position: center top;
-  background-size: cover;
-  height: calc(100vh - 120px);
-}
-body#page-login:after {
-  display: block;
-  position: fixed;
-  content: '';
-  top: 0;
-  left: 0;
-  background-color: rgba(0, 0, 0, 0.25);
-  width: 100%;
-  height: 100%;
-  z-index: -1;
+  background-color: #eee;
 }
 
 a {
@@ -175,9 +159,10 @@ input.input-text:disabled {
 
 .login-container {
   width: 345px;
-  padding-left: 200px;
-  background: url(images/logo.svg) left center no-repeat;
-  margin: 120px 0 0 calc(50vw - 372px);
+  background: url(images/logo.svg) top center no-repeat;
+  background-size: 70%;
+  padding-top: 100px;
+  margin: 50px auto 0 auto;
 }
 .login-container .legal {
   margin: 0;
@@ -194,12 +179,11 @@ input.input-text:disabled {
 }
 
 .login-form {
-  background: url(images/icon-error.png) no-repeat;
   text-align: left;
   background: white;
   border: none;
   padding: 40px 50px;
-  box-shadow: 0 30px 150px rgba(0, 0, 0, 0.5);
+  box-shadow: 0 30px 50px rgba(0, 0, 0, 0.5);
 }
 .login-form .input-box {
   margin: 10px 0;
