--- a/app/design/adminhtml/default/openmage/template/page/header.phtml
+++ b/app/design/adminhtml/default/openmage/template/page/header.phtml
@@ -16,7 +16,7 @@
 /** @var $this Mage_Adminhtml_Block_Page_Header */
 ?>
 <div class="header-top">
-    <a href="<?= $this->getHomeLink() ?>" class="logo" title="<?= $this->__('OpenMage ver. %s', Mage::getOpenMageVersion()) ?>">
+    <a href="<?= $this->getHomeLink() ?>" class="logo" title="Maho <?= Mage::getMahoVersion() ?>">
         <svg xmlns="http://www.w3.org/2000/svg" width="100%" height="100%" viewBox="0 0 242 237" fill-rule="evenodd" stroke-linejoin="round" stroke-miterlimit="2"><g transform="matrix(.710571 0 0 .710571 -564.814 315.583)"><clipPath id="A"><path d="M844.242-396.422h241.346v236.975H844.242z"/></clipPath><g clip-path="url(#A)"><path d="M1075.34-395.845c5.8 0 10.49 4.654 10.49 10.392v109.133c0 64.867-53.09 117.45-118.569 117.45h-112.28c-5.796 0-10.496-4.654-10.496-10.396v-115.717c0-61.225 50.113-110.863 111.929-110.863h118.926v.001zm-111.229 40.954c-42.454 0-76.871 34.088-76.871 76.142s34.417 76.138 76.871 76.138c42.459 0 76.869-34.088 76.869-76.138s-34.41-76.142-76.869-76.142z" fill="#d7df22"/></g></g></svg>
 	</a>
     <div class="header-right">
