--- a/app/design/frontend/base/default/template/page/html/footer.phtml
+++ b/app/design/frontend/base/default/template/page/html/footer.phtml
@@ -21,7 +21,7 @@
 <div class="footer-container">
     <div class="footer">
         <?= $this->getChildHtml() ?>
-        <p class="bugs"><?= $this->__('Help Us to Keep OpenMage Healthy') ?> - <a href="https://github.com/OpenMage/magento-lts/issues" onclick="this.target='_blank'"><strong><?= $this->__('Report All Bugs') ?></strong></a> <?= $this->__('(ver. %s)', Mage::getOpenMageVersion()) ?></p>
+        <p class="bugs"><?= $this->__('Help Us to Keep OpenMage Healthy') ?> - <a href="https://github.com/OpenMage/magento-lts/issues" onclick="this.target='_blank'"><strong><?= $this->__('Report All Bugs') ?></strong></a> <?= Mage::getMahoVersion() ?></p>
         <address><?= $this->getCopyright() ?></address>
     </div>
 </div>
