--- a/app/design/install/default/default/template/page.phtml
+++ b/app/design/install/default/default/template/page.phtml
@@ -91,7 +91,7 @@
     <div class="footer-container">
         <div class="footer">
         <p class="legality">
-            <?= Mage::helper('install')->__('Help Us to Keep OpenMage Healthy') ?> - <a href="https://github.com/OpenMage/magento-lts/issues" id="bug_tracking_link"><strong><?= Mage::helper('install')->__('Report All Bugs') ?></strong></a> <?= Mage::helper('install')->__('(ver. %s)', Mage::getOpenMageVersion()) ?><br/>
+            <?= Mage::helper('install')->__('Help Us to Keep OpenMage Healthy') ?> - <a href="https://github.com/OpenMage/magento-lts/issues" id="bug_tracking_link"><strong><?= Mage::helper('install')->__('Report All Bugs') ?></strong></a> <?= Mage::getMahoVersion() ?><br/>
 <script type="text/javascript">
 //<![CDATA[
     $('bug_tracking_link').target = "varien_external";
