--- a/app/design/adminhtml/default/default/layout/main.xml
+++ b/app/design/adminhtml/default/default/layout/main.xml
@@ -111,8 +111,8 @@ Default layout, loads most of the pages
             <block type="core/messages" name="messages" as="messages"/>
             <block type="core/text_list" name="js" as="js"/>
             <block type="adminhtml/page_footer" name="footer" as="footer">
-                <action method="setOpenMageProjectUrl"><url>https://www.openmage.org</url></action>
-                <action method="setReportIssuesUrl"><url>https://github.com/OpenMage/magento-lts/issues</url></action>
+                <action method="setMahoProjectUrl"><url>https://mahocommerce.com</url></action>
+                <action method="setReportIssuesUrl"><url>https://github.com/MahoCommerce/maho/issues</url></action>
             </block>
             <block type="core/profiler" name="profiler" as="profiler"/>
             <block type="core/text_list" name="before_body_end" as="before_body_end"/>
