Removed scriptaculous, added html5sortable and MahoAutocomplete

--- a/app/design/adminhtml/default/default/layout/catalog.xml
+++ b/app/design/adminhtml/default/default/layout/catalog.xml
@@ -34,6 +34,9 @@
 
     <adminhtml_catalog_product_new>
         <update handle="editor"/>
+        <reference name="head">
+            <action method="addItem"><type>js</type><name>html5sortable.min.js</name><params/></action>
+        </reference>
         <reference name="content">
             <block type="adminhtml/catalog_product_edit" name="product_edit"></block>
         </reference>
@@ -41,13 +44,17 @@
             <block type="adminhtml/catalog_product_edit_tabs" name="product_tabs"></block>
         </reference>
         <reference name="js">
-            <block type="adminhtml/catalog_product_edit_js" template="catalog/product/js.phtml" name="catalog_product_js"></block>
+            <block type="adminhtml/catalog_product_edit_js" template="catalog/product/js.phtml"
+                   name="catalog_product_js"></block>
             <block type="core/template" template="catalog/wysiwyg/js.phtml"/>
         </reference>
     </adminhtml_catalog_product_new>
 
     <adminhtml_catalog_product_edit>
         <update handle="editor"/>
+        <reference name="head">
+            <action method="addItem"><type>js</type><name>html5sortable.min.js</name><params/></action>
+        </reference>
         <reference name="content">
             <block type="adminhtml/catalog_product_edit" name="product_edit"></block>
         </reference>
