Fixed typos from previous commit

--- a/app/design/adminhtml/default/default/layout/catalog.xml
+++ b/app/design/adminhtml/default/default/layout/catalog.xml
@@ -44,8 +44,7 @@
             <block type="adminhtml/catalog_product_edit_tabs" name="product_tabs"></block>
         </reference>
         <reference name="js">
-            <block type="adminhtml/catalog_product_edit_js" template="catalog/product/js.phtml"
-                   name="catalog_product_js"></block>
+            <block type="adminhtml/catalog_product_edit_js" template="catalog/product/js.phtml" name="catalog_product_js"></block>
             <block type="core/template" template="catalog/wysiwyg/js.phtml"/>
         </reference>
     </adminhtml_catalog_product_new>
