--- a/app/design/adminhtml/default/default/template/forgotpassword.phtml
+++ b/app/design/adminhtml/default/default/template/forgotpassword.phtml
@@ -47,7 +47,7 @@
                         <button type="submit" class="forgot-password form-button"><span><span><span><?= Mage::helper('adminhtml')->__('Retrieve Password') ?></span></span></span></button>
                     </div>
                 </fieldset>
-                <p class="legal"><?= Mage::helper('adminhtml')->__('Powered by OpenMage') ?></p>
+                <p class="legal"><?= Mage::helper('adminhtml')->__('Powered by Maho') ?></p>
             </form>
             <div class="bottom"></div>
             <script type="text/javascript">
