--- a/app/design/adminhtml/default/default/template/login.phtml
+++ b/app/design/adminhtml/default/default/template/login.phtml
@@ -51,7 +51,7 @@
                         <button type="submit" class="form-button"><span><span><span><?= Mage::helper('adminhtml')->__('Login') ?></span></span></span></button>
                     </div>
                 </div>
-                <p class="legal"><?= Mage::helper('adminhtml')->__('Powered by OpenMage') ?></p>
+                <p class="legal"><?= Mage::helper('adminhtml')->__('Powered by Maho') ?></p>
             </form>
             <div class="bottom"></div>
             <script type="text/javascript">
