--- a/app/design/adminhtml/default/default/layout/main.xml
+++ b/app/design/adminhtml/default/default/layout/main.xml
@@ -43,7 +43,7 @@ Default layout, loads most of the pages
     <default>
         <block type="adminhtml/page" name="root" output="toHtml" template="page.phtml">
            <block type="adminhtml/page_head" name="head" as="head" template="page/head.phtml">
-                <action method="setTitle" translate="title"><title>OpenMage Admin</title></action>
+                <action method="setTitle" translate="title"><title>Maho Admin</title></action>
                 <action method="addJs"><script>prototype/prototype.js</script></action>
                 <action method="addJs"><script>maho-dialog.js</script></action>
                 <action method="addJs"><script>prototype/validation.js</script></action>
