--- a/app/design/adminhtml/default/default/template/login.phtml
+++ b/app/design/adminhtml/default/default/template/login.phtml
@@ -18,7 +18,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="robots" content="noindex, nofollow" />
-    <title><?= Mage::helper('adminhtml')->__('Log into OpenMage Admin Page') ?></title>
+    <title><?= Mage::helper('adminhtml')->__('Log into Maho Admin Page') ?></title>
     <link type="text/css" rel="stylesheet" href="<?= $this->getSkinUrl('reset.css') ?>" media="all" />
     <link type="text/css" rel="stylesheet" href="<?= $this->getSkinUrl('boxes.css') ?>" media="all" />
     <link rel="icon" href="<?= $this->getSkinUrl('favicon.ico') ?>" type="image/x-icon" />
