--- a/pub/skin/adminhtml/default/openmage/override.css
+++ b/pub/skin/adminhtml/default/openmage/override.css
@@ -488,6 +488,10 @@ small {
   margin-top: 30px;
   border-top: 1px solid #c8c8c8;
   font-size: 12px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 0.5em;
 }
 
 ul.tabs-horiz {
