"powered by maho is" no longer translatable

--- a/app/design/adminhtml/default/openmage/template/login.phtml
+++ b/app/design/adminhtml/default/openmage/template/login.phtml
@@ -50,7 +50,7 @@
                         <input type="submit" class="form-button" value="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Login')) ?>" title="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Login')) ?>" />
                     </div>
                 </div>
-                <p class="legal"><?= Mage::helper('adminhtml')->__('Powered by Maho') ?></p>
+                <p class="legal">Powered by Maho</p>
             </form>
             <div class="bottom"></div>
             <script type="text/javascript">
