--- a/app/design/adminhtml/default/openmage/template/resetforgottenpassword.phtml
+++ b/app/design/adminhtml/default/openmage/template/resetforgottenpassword.phtml
@@ -54,7 +54,7 @@
                         <input type="submit" class="forgot-password form-button" value="<?= Mage::helper('core')->quoteEscape(Mage::helper('adminhtml')->__('Reset Password')) ?>" />
                     </div>
                 </fieldset>
-                <p class="legal"><?= Mage::helper('adminhtml')->__('Powered by Maho') ?></p>
+                <p class="legal">Powered by Maho</p>
             </form>
             <div class="bottom"></div>
             <script type="text/javascript">
