--- a/app/design/adminhtml/default/default/template/resetforgottenpassword.phtml
+++ b/app/design/adminhtml/default/default/template/resetforgottenpassword.phtml
@@ -54,7 +54,7 @@
                         <button type="submit" class="forgot-password form-button"><span><span><span><?= Mage::helper('adminhtml')->__('Reset Password') ?></span></span></span></button>
                     </div>
                 </fieldset>
-                <p class="legal"><?= Mage::helper('adminhtml')->__('Powered by Maho') ?></p>
+                <p class="legal">Powered by Maho</p>
             </form>
             <div class="bottom"></div>
             <script type="text/javascript">
