--- a/app/design/adminhtml/default/openmage/template/forgotpassword.phtml
+++ b/app/design/adminhtml/default/openmage/template/forgotpassword.phtml
@@ -46,7 +46,7 @@
                         <input type="submit" class="forgot-password form-button" value="<?= Mage::helper('adminhtml')->__('Retrieve Password') ?>">
                     </div>
                 </fieldset>
-                <p class="legal"><?= Mage::helper('adminhtml')->__('Powered by Maho') ?></p>
+                <p class="legal">Powered by Maho</p>
             </form>
             <div class="bottom"></div>
             <script type="text/javascript">
