Rebranding of the web install

--- a/app/design/install/default/default/template/install/begin.phtml
+++ b/app/design/install/default/default/template/install/begin.phtml
@@ -16,7 +16,7 @@
  */
 ?>
 <div class="page-head">
-    <h3><?= $this->__("Welcome to OpenMage's Installation Wizard") ?>!</h3>
+    <h3><?= $this->__("Welcome to Maho's Installation Wizard") ?>!</h3>
 </div>
 <?= $this->getMessagesBlock()->toHtml() ?>
 <?php if(count($this->getMessagesBlock()->getMessages())==0): ?>
