--- a/app/design/install/default/default/template/install/config.phtml
+++ b/app/design/install/default/default/template/install/config.phtml
@@ -54,7 +54,7 @@
             <label for="secure_base_url"><?= $this->__('Secure Base URL') ?> <span class="required">*</span></label><br />
             <input type="text" name="config[secure_base_url]" id="secure_base_url" value="<?= $this->getFormData()->getSecureBaseUrl() ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Secure Base URL')) ?>" class="required-entry validate-url input-text" />
             <p style="margin-top:4px; line-height:1.3em; color:#666;">
-                <small><?= $this->__('Provide a complete base URL for SSL connection. For example: %s', '<strong>https://www.mydomain.com/openmage/</strong>') ?></small>
+                <small><?= $this->__('Provide a complete base URL for SSL connection. For example: %s', '<strong>https://mydomain.com/maho/</strong>') ?></small>
             </p>
         </li>
         <li>
