--- a/app/design/install/default/default/template/install/end.phtml
+++ b/app/design/install/default/default/template/install/end.phtml
@@ -23,7 +23,7 @@
 <?php endif ?>
 <p><?= $this->__('Get ready to experience Open-Source eCommerce Evolved.') ?></p>
 <?php if($this->getEncryptionKey()): ?>
-<p><?= $this->__('Before you continue to your store, please make a note of your encryption key (OpenMage uses it to encrypt passwords, credit cards and more).') ?></p>
+<p><?= $this->__('Before you continue to your store, please make a note of your encryption key (Maho uses it to encrypt passwords, credit cards and more).') ?></p>
 <p><strong><big><?= $this->getEncryptionKey() ?></big></strong></p>
 <p><?= $this->__('(Make sure you keep it in a safe place.)') ?></p>
 <?php endif ?>
