--- a/app/design/install/default/default/template/install/create_admin.phtml
+++ b/app/design/install/default/default/template/install/create_admin.phtml
@@ -83,7 +83,7 @@
         <li>
             <input type="text" name="encryption_key" id="encryption_key" value="<?= $this->getFormData()->getEncryptionKey() ?>" title="<?= Mage::helper('core')->quoteEscape($this->__('Encryption Key')) ?>" class="input-text"/>
             <p style="margin-top:4px; line-height:1.3em; color:#666;">
-                <small><?= $this->__('OpenMage uses this key to encrypt passwords, credit cards and more. If this field is left empty the system will create an encryption key for you and will display it on the next page.') ?></small>
+                <small><?= $this->__('Maho uses this key to encrypt passwords, credit cards and more. If this field is left empty the system will create an encryption key for you and will display it on the next page.') ?></small>
             </p>
         </li>
     </ul>
