--- a/app/design/install/default/default/template/install/db/main.phtml
+++ b/app/design/install/default/default/template/install/db/main.phtml
@@ -18,43 +18,42 @@
  */
 ?>
 <script type="text/javascript">
-//<![CDATA[
-var dbTypeIds = [];
-function showContent(select)
-{
-    dbTypeIds.each(function (name) {
-        $(name + '_conn_form').hide()
-    });
-    $(select.value + '_conn_form').show();
-}
-//]]>
+    //<![CDATA[
+    let dbTypeIds = [];
+    function showContent(select) {
+        dbTypeIds.forEach(function (name) {
+            document.getElementById(name + '_conn_form').style.display = 'none';
+        });
+        document.getElementById(select.value + '_conn_form').style.display = 'block';
+    }
+    //]]>
 </script>
 
 <fieldset class="group-select">
- <legend><?= $this->__('Connection') ?></legend>
+    <legend><?= $this->__('Connection') ?></legend>
     <h4 class="legend"><?= $this->__('Database Connection') ?></h4>
     <ul>
         <?php $dbTypeOptions = $this->getDatabaseBlocks(); ?>
         <?php if (count($dbTypeOptions) > 0): ?>
-        <li>
-            <div class="input-box">
-                <label for="prefix"><?= $this->__('Database Type') ?></label><br />
-                <select name="config[db_model]" onchange="showContent(this)">
-                    <?php foreach($dbTypeOptions as $block): ?>
-                        <option value="<?= $block->getIdPrefix()?>" <?php if($this->getFormData()->getDbModel() == $block->getIdPrefix()):?>selected="selected"<?php endif ?>><?= $block->getTitle() ?></option>
-                    <?php endforeach ?>
-                </select>
-            </div>
-        </li>
+            <li>
+                <div class="input-box">
+                    <label for="prefix"><?= $this->__('Database Type') ?></label><br />
+                    <select name="config[db_model]" onchange="showContent(this)">
+                        <?php foreach($dbTypeOptions as $block): ?>
+                            <option value="<?= $block->getIdPrefix()?>" <?php if($this->getFormData()->getDbModel() == $block->getIdPrefix()):?>selected="selected"<?php endif ?>><?= $block->getTitle() ?></option>
+                        <?php endforeach ?>
+                    </select>
+                </div>
+            </li>
         <?php endif ?>
 
         <?php foreach ($dbTypeOptions as $block): ?>
             <script type="text/javascript">
-            //<![CDATA[
-                dbTypeIds[dbTypeIds.length] = "<?= $block->getIdPrefix() ?>";
-            //]]>
+                //<![CDATA[
+                dbTypeIds.push("<?= $block->getIdPrefix() ?>");
+                //]]>
             </script>
-            <?php $block = $this->getDatabaseBlock($block->getIdPrefix()) ?>
+        <?php $block = $this->getDatabaseBlock($block->getIdPrefix()) ?>
 
             <div id="<?= $block->getIdPrefix() ?>_conn_form" <?php if($this->getFormData()->getDbModel() != $block->getIdPrefix()):?>style="display:none;"<?php endif ?>>
                 <ul>
