--- a/app/design/adminhtml/default/default/template/catalog/category/edit/form.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/category/edit/form.phtml
@@ -29,7 +29,7 @@
     <?= Mage::helper('catalog')->__('Set root category for this store in the <a href="%s">configuration</a>', $this->getStoreConfigurationUrl()) ?>
 </div>
 <?php endif ?>
-<iframe name="iframeSave" style="display:none; width:100%;" src="<?= $this->getJsUrl() ?>blank.html"></iframe>
+<iframe name="iframeSave" style="display:none; width:100%;"></iframe>
 <form target="iframeSave" id="category_edit_form" action="<?= $this->getSaveUrl() ?>" method="post" enctype="multipart/form-data">
     <div class="no-display">
         <input type="hidden" name="isIframe" value="1" />
