--- a/app/design/adminhtml/default/default/template/system/convert/profile/run.phtml
+++ b/app/design/adminhtml/default/default/template/system/convert/profile/run.phtml
@@ -70,4 +70,4 @@ function getTransferType()
 </div>
 
 <?= $this->getRunButtonHtml() ?><br />
-<iframe id="run_iframe" src="<?= $this->getJsUrl() ?>blank.html" frameborder="0" style="display:none; width:100%; height:400px;"></iframe>
+<iframe id="run_iframe" frameborder="0" style="display:none; width:100%; height:400px;"></iframe>
