Removed ancient file public/js/spacer.gif

--- a/app/design/adminhtml/default/default/template/catalog/product/helper/gallery.phtml
+++ b/app/design/adminhtml/default/default/template/catalog/product/helper/gallery.phtml
@@ -48,7 +48,7 @@
                     <div class="place-holder"
                          onmouseover="<?= $this->getJsObjectName() ?>.loadImage('__file__')">
                         <span><?= Mage::helper('catalog')->__('Roll Over for preview') ?></span></div>
-                    <img src="<?= $this->getSkinUrl('images/spacer.gif') ?>" width="100" style="display:none;"
+                    <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" width="100" style="display:none;"
                          alt=""/></td>
                 <td class="cell-label"><input
                             type="text" <?php if ($this->getElement()->getReadonly()): ?> disabled="disabled"<?php endif ?>
