--- a/app/design/adminhtml/default/default/template/report/grid.phtml
+++ b/app/design/adminhtml/default/default/template/report/grid.phtml
@@ -65,16 +65,14 @@ $numColumns = count($this->getColumns());
                     <?= $this->getRefreshButtonHtml() ?>
                 </div>
                 <script type="text/javascript">
-                <!--
-                Calendar.setup({
-                    inputField : 'period_date_from',
-                    ifFormat : '<?= $this->getDateFormat() ?>'
-                });
-                Calendar.setup({
-                    inputField : 'period_date_to',
-                    ifFormat : '<?= $this->getDateFormat() ?>'
-                });
-                //-->
+                    Calendar.setup({
+                        inputField : 'period_date_from',
+                        ifFormat : '<?= $this->getDateFormat() ?>'
+                    });
+                    Calendar.setup({
+                        inputField : 'period_date_to',
+                        ifFormat : '<?= $this->getDateFormat() ?>'
+                    });
                 </script>
             </td>
         <?php endif ?>
@@ -117,15 +115,17 @@ $numColumns = count($this->getColumns());
             <tr>
             <?php $report=$this->getReport($_item['start'], $_item['end']) ?>
             <?php $rows=count($report) ?>
-            <?php if ($rows > 0 ): ?>
-            <td rowspan="<?= $rows + ($this->getCountTotals() && $this->getSubtotalVisibility()?1:0) ?>"><?= $_index ?></td>
-                <?php $i=0;foreach ($report as $_subIndex=>$_subItem): ?>
+            <?php if ($rows > 0): ?>
+            <td rowspan="<?= $rows + ($this->getCountTotals() && $this->getSubtotalVisibility() ? 1 : 0) ?>"><?= $_index ?></td>
+                <?php $i=0;
+                foreach ($report as $_subIndex=>$_subItem): ?>
                     <?php if($i>0): ?>
                     <tr>
                     <?php endif ?>
                     <?php $i++; ?>
-                    <?php $j=0;foreach ($this->getColumns() as $_column): ?>
-                        <td class="<?= $_column->getCssProperty() ?> <?= ++$j==$numColumns?'last':'' ?>">
+                    <?php $j=0;
+                    foreach ($this->getColumns() as $_column): ?>
+                        <td class="<?= $_column->getCssProperty() ?> <?= ++$j==$numColumns ? 'last' : '' ?>">
                             <?= (($_html = $_column->getRowField($_subItem)) != '' ? $_html : '&nbsp;') ?>
                         </td>
                     <?php endforeach ?>
@@ -133,9 +133,10 @@ $numColumns = count($this->getColumns());
                 <?php endforeach ?>
                 <?php if($this->getCountTotals() && $rows > 0 && $this->getSubtotalVisibility()): ?>
                 <tr>
-                    <?php $j=0;foreach ($this->getColumns() as $_column): ?>
-                        <td class="<?= $_column->getCssProperty() ?> <?= ++$j==$numColumns?'last':'' ?> subtotal">
-                            <?= ($j==1)?$this->getSubtotalText():$_column->getRowField($this->getTotals()) ?>
+                    <?php $j=0;
+                    foreach ($this->getColumns() as $_column): ?>
+                        <td class="<?= $_column->getCssProperty() ?> <?= ++$j==$numColumns ? 'last' : '' ?> subtotal">
+                            <?= ($j==1) ? $this->getSubtotalText() : $_column->getRowField($this->getTotals()) ?>
                         </td>
                     <?php endforeach ?>
                 </tr>
@@ -155,8 +156,9 @@ $numColumns = count($this->getColumns());
         <?php if ($this->getCountTotals() && $this->getCollection()->getSize()): ?>
         <tfoot>
             <tr><th><?= $this->getTotalText() ?></th>
-            <?php $j=0;foreach ($this->getColumns() as $_column): ?>
-                <th class="<?= $_column->getCssProperty() ?> <?= ++$j==$numColumns?'last':'' ?>"><?= $_column->getRowField($this->getGrandTotals()) ?></th>
+            <?php $j=0;
+            foreach ($this->getColumns() as $_column): ?>
+                <th class="<?= $_column->getCssProperty() ?> <?= ++$j==$numColumns ? 'last' : '' ?>"><?= $_column->getRowField($this->getGrandTotals()) ?></th>
             <?php endforeach ?>
             </tr>
          </tfoot>
@@ -166,51 +168,27 @@ $numColumns = count($this->getColumns());
 <?php if($this->canDisplayContainer()): ?>
 </div>
 <script type="text/javascript">
-//<![CDATA[
-    <?= $this->getJsObjectName() ?> = new varienGrid('<?= $this->getId() ?>', '<?= $this->getGridUrl() ?>', '<?= $this->getVarNamePage() ?>', '<?= $this->getVarNameSort() ?>', '<?= $this->getVarNameDir() ?>', '<?= $this->getVarNameFilter() ?>');
+    var <?= $this->getJsObjectName() ?> = new varienGrid('<?= $this->getId() ?>', '<?= $this->getGridUrl() ?>', '<?= $this->getVarNamePage() ?>', '<?= $this->getVarNameSort() ?>', '<?= $this->getVarNameDir() ?>', '<?= $this->getVarNameFilter() ?>');
     <?= $this->getJsObjectName() ?>.useAjax = '<?= $this->getUseAjax() ?>';
     <?php if($this->getDateFilterVisibility()):?>
-    <?= $this->getJsObjectName() ?>.doFilterCallback = validateFilterDate;
-    var period_date_from = $('period_date_from');
-    var period_date_to   = $('period_date_to');
-    period_date_from.advaiceContainer = $('period_date_from_advaice');
-    period_date_to.advaiceContainer = $('period_date_to_advaice');
-
-    function validateFilterDate()
-    {
-        if (period_date_from && period_date_to) {
-            return Validation.validate(period_date_from) && Validation.validate(period_date_to);
+        <?= $this->getJsObjectName() ?>.doFilterCallback = validateFilterDate;
+        const period_date_from = document.getElementById('period_date_from');
+        if (period_date_from) {
+            period_date_from.advaiceContainer = document.getElementById('period_date_from_advaice');
         }
-        else {
+        const period_date_to = document.getElementById('period_date_to');
+        if (period_date_to) {
+            period_date_to.advaiceContainer = document.getElementById('period_date_to_advaice');
+        }
+
+        function validateFilterDate()
+        {
+            if (period_date_from && period_date_to) {
+                return Validation.validate(period_date_from) && Validation.validate(period_date_to);
+            }
             return true;
         }
-    }
     <?php endif ?>
-    /* Overwrite function from switcher.phtml widget*/
-    function switchStore(obj){
-        if (obj.options[obj.selectedIndex].getAttribute('website') == 'true') {
-            var selectionType = 'website';
-        } else if (obj.options[obj.selectedIndex].getAttribute('group') == 'true') {
-            var selectionType = 'group';
-        } else {
-            var selectionType = 'store';
-        }
-        var storeParam = obj.value ? selectionType + '/' + obj.value + '/' : '';
-        if(obj.switchParams){
-            storeParam+= obj.switchParams;
-        }
-        var formParam = new Array('period_date_from', 'period_date_to', 'report_period');
-        var paramURL = '';
-        var switchURL = '<?= $this->getAbsoluteGridUrl(['_current' => false]) ?>'.replace(/(store|group|website)\/\d+\//,'');
-
-        for(var i=0;i<formParam.length;i++){
-            if ($(formParam[i]).value && $(formParam[i]).name) {
-                paramURL+= $(formParam[i]).name + '=' + escape($(formParam[i]).value) + '&';
-            }
-        }
-        setLocation(switchURL + storeParam + '?' + paramURL);
-    }
-//]]>
 </script>
 <?php endif ?>
 <?php endif ?>
