--- a/app/design/adminhtml/default/default/template/oauth/authorize/head-simple.phtml
+++ b/app/design/adminhtml/default/default/template/oauth/authorize/head-simple.phtml
@@ -20,7 +20,8 @@
 ?>
 <meta http-equiv="Content-Type" content="<?= $this->getContentType() ?>"/>
 <title><?= htmlspecialchars(html_entity_decode($this->getTitle())) ?></title>
-<link rel="icon" href="<?= $this->getSkinUrl('favicon.ico') ?>" type="image/x-icon"/>
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" sizes="any">
+<link rel="icon" type="image/png" href="/favicon.png">
 
 <script type="text/javascript">
 //<![CDATA[
