--- a/app/design/adminhtml/default/default/template/page/head.phtml
+++ b/app/design/adminhtml/default/default/template/page/head.phtml
@@ -15,7 +15,8 @@
 <meta http-equiv="Content-Type" content="<?= $this->getContentType() ?>"/>
 <meta name="robots" content="noindex, nofollow"/>
 <title><?= htmlspecialchars(html_entity_decode($this->getTitle())) ?></title>
-<link rel="icon" href="<?= $this->getSkinUrl('favicon.ico') ?>" type="image/x-icon"/>
+<link rel="icon" type="image/svg+xml" href="/favicon.svg" sizes="any">
+<link rel="icon" type="image/png" href="/favicon.png">
 
 <script type="text/javascript">
     var BASE_URL = '<?= $this->getUrl('*') ?>';
