--- a/app/design/install/default/default/template/page.phtml
+++ b/app/design/install/default/default/template/page.phtml
@@ -24,6 +24,8 @@
     <script type="text/javascript" src="<?= $this->getJsUrl() ?>prototype/validation.js"></script>
     <script type="text/javascript" src="<?= $this->getJsUrl() ?>varien/js.js"></script>
     <script type="text/javascript" src="<?= $this->getJsUrl() ?>varien/form.js"></script>
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" sizes="any">
+    <link rel="icon" type="image/png" href="/favicon.png">
     <link rel="stylesheet" href="<?= $this->getSkinUrl('css/reset.css') ?>" type="text/css" media="all"/>
     <link rel="stylesheet" href="<?= $this->getSkinUrl('css/boxes.css') ?>" type="text/css" media="all"/>
     <link rel="stylesheet" href="<?= $this->getSkinUrl('css/clears.css') ?>" type="text/css" media="all"/>
