refactor: Move favicons to skin

--- a/app/design/adminhtml/default/openmage/template/resetforgottenpassword.phtml
+++ b/app/design/adminhtml/default/openmage/template/resetforgottenpassword.phtml
@@ -17,8 +17,8 @@
     <meta name="robots" content="noindex, nofollow" />
     <title><?= Mage::helper('adminhtml')->__('Reset a Password') ?></title>
     <link type="text/css" rel="stylesheet" href="<?= $this->getSkinUrl('login.css') ?>" media="all" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" sizes="any">
-    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="icon" type="image/svg+xml" href="<?= $this->getSkinUrl('images/favicon.svg') ?>" sizes="any">
+    <link rel="icon" type="image/png" href="<?= $this->getSkinUrl('images/favicon.png') ?>">
     <script type="text/javascript" src="<?= $this->getJsUrl('prototype/prototype.js') ?>"></script>
     <script type="text/javascript" src="<?= $this->getJsUrl('prototype/validation.js') ?>"></script>
     <script type="text/javascript" src="<?= $this->getJsUrl('mage/adminhtml/form.js') ?>"></script>
