--- a/app/design/adminhtml/default/default/template/oauth/authorize/head-simple.phtml
+++ b/app/design/adminhtml/default/default/template/oauth/authorize/head-simple.phtml
@@ -20,8 +20,8 @@
 ?>
 <meta http-equiv="Content-Type" content="<?= $this->getContentType() ?>"/>
 <title><?= htmlspecialchars(html_entity_decode($this->getTitle())) ?></title>
-<link rel="icon" type="image/svg+xml" href="/favicon.svg" sizes="any">
-<link rel="icon" type="image/png" href="/favicon.png">
+<link rel="icon" type="image/svg+xml" href="<?= $this->getSkinUrl('images/favicon.svg') ?>" sizes="any">
+<link rel="icon" type="image/png" href="<?= $this->getSkinUrl('images/favicon.png') ?>">
 
 <script type="text/javascript">
 //<![CDATA[
