--- a/app/design/frontend/base/default/template/oauth/authorize/head-simple.phtml
+++ b/app/design/frontend/base/default/template/oauth/authorize/head-simple.phtml
@@ -18,6 +18,7 @@
 ?>
 <meta http-equiv="Content-Type" content="<?= $this->getContentType() ?>" />
 <title><?= $this->getTitle() ?></title>
-<link rel="icon" href="<?= $this->getFaviconFile() ?>" type="image/x-icon" />
+<link rel="icon" type="image/svg+xml" href="<?= $this->getSkinUrl('images/favicon.svg') ?>" sizes="any">
+<link rel="icon" type="image/png" href="<?= $this->getSkinUrl('images/favicon.png') ?>">
 
 <?= $this->getCssJsHtml() ?>
